--- a/main/src/core/Mono.Texteditor/Mono.TextEditor.csproj
+++ b/main/src/core/Mono.Texteditor/Mono.TextEditor.csproj
@@ -215,6 +215,7 @@
     <Compile Include="Mono.TextEditor.Vi\ViModeAbortException.cs" />
     <Compile Include="Mono.TextEditor\ITextPasteHandler.cs" />
     <Compile Include="Mono.TextEditor.Vi\NewViEditMode.cs" />
+    <Compile Include="Mono.TextEditor.Vi\ViStatusArea.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Mono.TextEditor.dll.config">
